this is my project

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
             <div class="row">
                 <div class="col-md-5">
                     <div class="why-choose-section-content">
-                        <h1 class="why-choose-content-head">Why Choose Us</h1>
-                        <p class="why-choose-content-para">Discover a trusted platform where learning, mentorship, and career opportunities come together. With verified users, personalized guidance, and seamless tools, we empower you to build skills, connect with professionals, and unlock new career paths. Join us to advance your journey with confidence and ease.</p>
+                        <p class="why-choose-content-para">Why Choose Us</p>
+                        <p class="why-choose-content-head">Empowering Your Journey with Trust and Opportunity</p>
                     </div>
                 </div>
                 <div class="col-md-7">
@@ -154,6 +154,8 @@
 
     <div class="rexx-features-container">
         <div class="container">
+            <p class="rexx-features-main-para">Features</p>
+            <!--<h1 class="rexx-features-main-head">Smart Features for Smarter Career Growth</h1>-->
             <div class="row">
                 <div class="col-md-4 col-12">
                     <div class="features-sub-card-container">
@@ -561,7 +563,8 @@
                 </div>
                 
                 <div class="col-lg-7 col-md-12 col-12">
-                    <h1 class="how-work-main-head">How It Works</h1>
+                    <p class="how-work-main-para">How It Works</p>
+                    <h1 class="how-work-main-head">Simple Steps to Unlock Your Potential</h1>
                     <div class="row">
                         <div class="col-12">
                             <div class="how-work-cards">
@@ -853,21 +856,21 @@
                                 <div class="sub-contact">
                                     <div class="input-box">
                                         <label for="name">Name</label>
-                                        <input type="text" class="input" id="name" required />
+                                        <input type="text" class="input" id="name"  required />
                                     </div>
                                     <div class="input-box">
                                         <label for="email">Email</label>
-                                        <input type="email" class="input" id="email" required />
+                                        <input type="email" class="input" id="email"  required />
                                     </div>
                                 </div>
                                 <div class="sub-contact">
                                     <div class="input-box">
                                         <label for="phone">Phone</label>
-                                        <input type="tel" class="input" id="phone" required />
+                                        <input type="tel" class="input" id="phone"  required />
                                     </div>
                                     <div class="input-box">
                                         <label for="category">Category</label>
-                                        <input type="text" class="input" id="category" required />
+                                        <input type="text" class="input" id="category"  required />
                                     </div>
                                 </div>
                                 <div class="input-box">
